--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "kdt-web-9_fullstack_mini-project",
-  "version": "1.0.0",
-  "description": "",
-  "main": "App.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mysql2": "^3.6.1",
-    "sequelize": "^6.33.0",
-    "sequelize-cli": "^6.6.1"
-  }
+	"name": "kdt-web-9_fullstack_mini-project",
+	"version": "1.0.0",
+	"description": "",
+	"main": "App.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"type": "module",
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"ejs": "^3.1.9",
+		"express": "^4.18.2",
+		"mysql": "^2.18.1",
+		"mysql2": "^3.6.1",
+		"sequelize": "^6.33.0",
+		"sequelize-cli": "^6.6.1"
+	}
 }
